--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Tesfa Walle <hopemelkamu28@gmail.com>
